@@ -20,6 +20,6 @@
 #
 ###################################################################
 
-igraph.arpack.default <- list(bmat="I", n=0, which="LA", nev=1, tol=0.0,
+igraph.arpack.default <- list(bmat="I", n=0, which="XX", nev=1, tol=0.0,
                               ncv=3, ldv=0, ishift=1, maxiter=300, nb=1,
-                              mode=1, start=0, sigma=0.0)
+                              mode=1, start=0, sigma=0.0, sigmai=0.0)
